src/objects/Travel__c.object
<CustomObject>
    <description>Travel Plans</description>
    <fields>
        <fullName>Additions_Comments__c</fullName>
        <label>Additions - Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Airfare_Coordination_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Airfare Coordination Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arrival_Airline__c</fullName>
        <label>Arrival Airline</label>
        <picklist>
            <picklistValues>
                <fullName>United</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arrival_Airport_Code__c</fullName>
        <label>Arrival Airport  Code</label>
        <picklist>
            <picklistValues>
                <fullName>SFO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrival_Flight_No__c</fullName>
        <label>Arrival Flight No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Arrived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <label>Booking Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Booked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Booked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Companion__c</fullName>
        <label>Companion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Airline__c</fullName>
        <label>Departure Airline</label>
        <picklist>
            <picklistValues>
                <fullName>United</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Departure_Airport_Code__c</fullName>
        <label>Departure Airport Code</label>
        <picklist>
            <picklistValues>
                <fullName>SFO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Flight_No__c</fullName>
        <label>Departure Flight No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Diagnosis__c</fullName>
        <label>Event Diagnosis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Local_Concier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Local Concier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ground_Transportation_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground Transportation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Coordination_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotel Coordination Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Nights_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotel Nights Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Nights_Needed__c</fullName>
        <label>Hotel Nights Needed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Approval__c</fullName>
        <label>Insurance Approval</label>
        <picklist>
            <picklistValues>
                <fullName>No Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Itinerary_Summary__c</fullName>
        <label>Itinerary Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Hospital_Nights__c</fullName>
        <label>Number of Hospital Nights</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passport_Status__c</fullName>
        <label>Passport Status</label>
        <picklist>
            <picklistValues>
                <fullName>Info Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Obtained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Travels</relationshipLabel>
        <relationshipName>Travels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pre_Op_Instructions__c</fullName>
        <label>Pre-Op Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Op__c</fullName>
        <label>Pre-Op</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure_Date__c</fullName>
        <label>Procedure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Hotel_Needs__c</fullName>
        <label>Special Hotel Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Passport_Visa__c</fullName>
        <label>Special Passport/Visa</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Added_Cost__c</fullName>
        <label>Total Added Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_End__c</fullName>
        <label>Travel End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Travel_Start__c</fullName>
        <label>Travel Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treatment</label>
        <referenceTo>Treatment__c</referenceTo>
        <relationshipLabel>Travels</relationshipLabel>
        <relationshipName>Treatment_Travels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Treatment_as_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treatment as Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Status__c</fullName>
        <label>Visa Status</label>
        <picklist>
            <picklistValues>
                <fullName>Info Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Obtained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wheel_Chair_Bound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wheel Chair Bound</label>
        <type>Checkbox</type>
    </fields>
    <label>Travel</label>
    <nameField>
        <label>Travel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>